# LibreriaSBI

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  libreriasbi.cpp  libsbi_test.cpp
hardware/: CMakeLists.txt
hardware/src/: CRegistro.cpp
include/: CConexion.h  CConfigura.h  CConfiguracion.h  CEscritor.h  CILogger.h  CLector.h  COracle.h  CParametro.h  CPlano.h  CRegistro.h  CRegistroLec.h  CSensor.h  CUtiles.h
src/: CConexion.cpp  CConfigura.cpp  CConfiguracion.cpp  CEscritor.cpp  CILogger.cpp  CLector.cpp  COracle.cpp  CParametro.cpp  CPlano.cpp  CRegistro.cpp  CRegistroLec.cpp  CSensor.cpp  CUtiles.cpp
tests/: CMakeLists.txt  configura_test.cpp
